[gd_scene load_steps=23 format=3 uid="uid://dokr14biam1hj"]

[ext_resource type="Script" uid="uid://bvjanc1l5qt86" path="res://scripts/Main.gd" id="1_tfod6"]
[ext_resource type="Script" uid="uid://btkeam6yo7pba" path="res://scripts/EffectManager.gd" id="2_rajel"]
[ext_resource type="Script" uid="uid://bxvjr2go4dlw6" path="res://scripts/CardManager.gd" id="3_vvhu1"]
[ext_resource type="Script" uid="uid://og0oya8vvyxd" path="res://scripts/PlayerHand.gd" id="4_lbihj"]
[ext_resource type="Script" uid="uid://b2qy63u1p8e23" path="res://scripts/EndTurnButton.gd" id="5_raj38"]
[ext_resource type="Script" uid="uid://bggmcpx3wkl85" path="res://scripts/DeckDisplay.gd" id="6_8e0uq"]
[ext_resource type="Script" uid="uid://dtab5k4buc3a2" path="res://scripts/DiscardDisplay.gd" id="7_i0vto"]
[ext_resource type="Script" uid="uid://jgmjqsrpmr8l" path="res://scripts/Resources.gd" id="8_3jf1l"]
[ext_resource type="Script" uid="uid://dkjrk5ruvaet6" path="res://scripts/HQ.gd" id="9_356ba"]
[ext_resource type="Script" uid="uid://0dlehe1upwxg" path="res://scripts/City.gd" id="10_i4lct"]
[ext_resource type="Script" uid="uid://m4h1jp75jtrx" path="res://scripts/HeroDeck.gd" id="11_iyesh"]
[ext_resource type="Script" uid="uid://cr0jam5chkls2" path="res://scripts/BlackScreen.gd" id="12_i1pr2"]
[ext_resource type="Script" uid="uid://b5wpv6b1xk6qe" path="res://scripts/KODeck.gd" id="13_4f4ik"]
[ext_resource type="Script" uid="uid://cxsnusqjmnx83" path="res://scripts/AttRecSliders.gd" id="13_vvhu1"]
[ext_resource type="Script" uid="uid://dc42lnh0jh83d" path="res://scripts/Wounds.gd" id="14_khs3t"]
[ext_resource type="Script" uid="uid://bj33fsh78563c" path="res://scripts/VillainDeck.gd" id="15_0iyqm"]
[ext_resource type="Script" uid="uid://cc3pje6hbw6fr" path="res://scripts/Bystanders.gd" id="16_jn8rg"]
[ext_resource type="Script" uid="uid://dn8bwc23u4h4a" path="res://scripts/EscapePile.gd" id="17_umnjm"]
[ext_resource type="Script" uid="uid://b0u7bdwgaemy6" path="res://scripts/Mastermind.gd" id="18_4eqlp"]
[ext_resource type="Script" uid="uid://dvbvsv34bvpfx" path="res://scripts/Scheme.gd" id="19_18uti"]
[ext_resource type="Script" uid="uid://coqq2aj6xwp0u" path="res://scripts/ExtraLabels.gd" id="20_khy6b"]
[ext_resource type="Script" uid="uid://c16bu5wag6g3o" path="res://scripts/ModifierManager.gd" id="21_rajel"]

[node name="Game" type="Node2D"]
script = ExtResource("1_tfod6")

[node name="EffectManager" type="Node2D" parent="."]
script = ExtResource("2_rajel")

[node name="ModifierManager" type="Node2D" parent="."]
script = ExtResource("21_rajel")

[node name="Scheme" type="Node2D" parent="."]
script = ExtResource("19_18uti")

[node name="CardManager" type="Node2D" parent="."]
script = ExtResource("3_vvhu1")

[node name="PlayerHand" type="Node2D" parent="."]
script = ExtResource("4_lbihj")

[node name="EndTurn" type="Node2D" parent="."]
visible = false

[node name="Button" type="Button" parent="EndTurn"]
offset_left = 1664.0
offset_top = 763.0
offset_right = 1900.0
offset_bottom = 862.0
focus_mode = 0
text = "End Turn"
script = ExtResource("5_raj38")

[node name="DeckDisplay" type="Node2D" parent="."]
script = ExtResource("6_8e0uq")

[node name="Label" type="Label" parent="DeckDisplay"]
offset_left = 34.0
offset_top = 700.0
offset_right = 100.0
offset_bottom = 726.0
text = "Deck: 6"

[node name="DiscardDisplay" type="Node2D" parent="."]
script = ExtResource("7_i0vto")

[node name="Label" type="Label" parent="DiscardDisplay"]
offset_left = 34.0
offset_top = 750.0
offset_right = 110.0
offset_bottom = 773.0
text = "Discard: 0"

[node name="Resources" type="Node2D" parent="."]
script = ExtResource("8_3jf1l")

[node name="Attack" type="Label" parent="Resources"]
offset_left = 34.0
offset_top = 800.0
offset_right = 102.0
offset_bottom = 823.0
text = "Attack: 0"

[node name="Recruit" type="Label" parent="Resources"]
offset_left = 34.0
offset_top = 850.0
offset_right = 107.0
offset_bottom = 873.0
text = "Recruit: 0"

[node name="UsernameLabel" type="Label" parent="Resources"]
offset_left = 25.0
offset_top = 20.0
offset_right = 102.0
offset_bottom = 61.0

[node name="HQ" type="Node2D" parent="."]
script = ExtResource("9_356ba")

[node name="ColorRect" type="ColorRect" parent="HQ"]
offset_left = 275.0
offset_top = 400.0
offset_right = 1575.0
offset_bottom = 650.0
color = Color(0.5890956, 0.5890956, 0.5890956, 1)

[node name="Cancel" type="Button" parent="HQ"]
z_index = 6
offset_left = -450.0
offset_top = 205.0
offset_right = -300.0
offset_bottom = 255.0
focus_mode = 0
text = "Cancel"

[node name="Recruit" type="Button" parent="HQ"]
z_index = 6
offset_left = -450.0
offset_top = 137.0
offset_right = -300.0
offset_bottom = 187.0
focus_mode = 0
text = "Recruit"

[node name="City" type="Node2D" parent="."]
script = ExtResource("10_i4lct")

[node name="ColorRect" type="ColorRect" parent="City"]
offset_left = 275.0
offset_top = 100.0
offset_right = 1575.0
offset_bottom = 350.0
color = Color(0.5890956, 0.5890956, 0.5890956, 1)

[node name="Cancel" type="Button" parent="City"]
z_index = 6
offset_left = -450.0
offset_top = 205.0
offset_right = -300.0
offset_bottom = 255.0
focus_mode = 0
text = "Cancel"

[node name="Fight" type="Button" parent="City"]
z_index = 6
offset_left = -450.0
offset_top = 205.0
offset_right = -300.0
offset_bottom = 255.0
focus_mode = 0
text = "Fight"

[node name="Label" type="Label" parent="City"]
offset_left = 1394.0
offset_top = 63.0
offset_right = 1575.0
offset_bottom = 95.0
text = "Sewers"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="City"]
offset_left = 1205.0
offset_top = 63.0
offset_right = 1386.0
offset_bottom = 95.0
text = "Bank"
horizontal_alignment = 1

[node name="Label3" type="Label" parent="City"]
offset_left = 1005.0
offset_top = 62.0
offset_right = 1186.0
offset_bottom = 94.0
text = "Rooftops"
horizontal_alignment = 1

[node name="Label4" type="Label" parent="City"]
offset_left = 805.0
offset_top = 64.0
offset_right = 986.0
offset_bottom = 96.0
text = "Streets"
horizontal_alignment = 1

[node name="Label5" type="Label" parent="City"]
offset_left = 605.0
offset_top = 63.0
offset_right = 786.0
offset_bottom = 95.0
text = "Bridge"
horizontal_alignment = 1

[node name="HeroDeck" type="Node2D" parent="."]
script = ExtResource("11_iyesh")

[node name="HeroLabel" type="Label" parent="HeroDeck"]
offset_left = 1703.0
offset_top = 132.0
offset_right = 1799.0
offset_bottom = 155.0
text = "Hero Deck: "

[node name="BlackScreen" type="Node2D" parent="."]
script = ExtResource("12_i1pr2")

[node name="Drapes" type="ColorRect" parent="BlackScreen"]
z_index = 20
offset_right = 1923.0
offset_bottom = 1073.0
color = Color(0, 0, 0, 0)

[node name="DiscardButton" type="Button" parent="BlackScreen"]
z_index = 25
offset_left = -446.0
offset_top = 339.0
offset_right = -296.0
offset_bottom = 389.0
focus_mode = 0
text = "Discard"

[node name="KOButton" type="Button" parent="BlackScreen"]
z_index = 25
offset_left = -446.0
offset_top = 339.0
offset_right = -296.0
offset_bottom = 389.0
focus_mode = 0
text = "KO"

[node name="OrderButton" type="Button" parent="BlackScreen"]
z_index = 25
offset_left = -446.0
offset_top = 339.0
offset_right = -296.0
offset_bottom = 389.0
focus_mode = 0
text = "Order"

[node name="Info" type="Label" parent="BlackScreen"]
z_index = 100
offset_left = -56.0
offset_top = 13.0
offset_right = -16.0
offset_bottom = 36.0

[node name="Sliders" type="Node2D" parent="BlackScreen"]
visible = false
z_index = 21
position = Vector2(60, 0)
script = ExtResource("13_vvhu1")

[node name="Attack Slider" type="VSlider" parent="BlackScreen/Sliders"]
offset_left = 1121.0
offset_top = 284.0
offset_right = 1171.0
offset_bottom = 768.0
max_value = 10.0
value = 5.0
rounded = true
tick_count = 11
ticks_on_borders = true
ticks_position = 2

[node name="Recruit Slider" type="VSlider" parent="BlackScreen/Sliders"]
offset_left = 1300.0
offset_top = 284.0
offset_right = 1350.0
offset_bottom = 768.0
max_value = 10.0
value = 5.0
rounded = true
tick_count = 11
ticks_on_borders = true
ticks_position = 2

[node name="AttackLabel" type="Label" parent="BlackScreen/Sliders"]
offset_left = 1113.0
offset_top = 236.0
offset_right = 1192.0
offset_bottom = 262.0
text = "Attack: "

[node name="RecruitLabel" type="Label" parent="BlackScreen/Sliders"]
offset_left = 1287.0
offset_top = 233.0
offset_right = 1366.0
offset_bottom = 259.0
text = "Recruit: "

[node name="CostLabel" type="Label" parent="BlackScreen/Sliders"]
offset_left = 1199.0
offset_top = 182.0
offset_right = 1334.0
offset_bottom = 211.0
text = "Cost: 15"

[node name="Fight" type="Button" parent="BlackScreen/Sliders"]
offset_left = 1461.0
offset_top = 419.0
offset_right = 1576.0
offset_bottom = 461.0
text = "Fight"

[node name="Cancel" type="Button" parent="BlackScreen/Sliders"]
offset_left = 1462.0
offset_top = 550.0
offset_right = 1577.0
offset_bottom = 592.0
text = "Cancel
"

[node name="KODeck" type="Node2D" parent="."]
script = ExtResource("13_4f4ik")

[node name="Wounds" type="Node2D" parent="."]
script = ExtResource("14_khs3t")

[node name="WoundLabel" type="Label" parent="Wounds"]
offset_left = 1705.0
offset_top = 69.0
offset_right = 1888.0
offset_bottom = 104.0
text = "Wounds: "

[node name="Bystanders" type="Node2D" parent="."]
script = ExtResource("16_jn8rg")

[node name="VillainDeck" type="Node2D" parent="."]
script = ExtResource("15_0iyqm")

[node name="VilLabel" type="Label" parent="VillainDeck"]
offset_left = 1703.0
offset_top = 98.0
offset_right = 1797.0
offset_bottom = 121.0
text = "Villain Deck:"

[node name="EscapePile" type="Node2D" parent="."]
script = ExtResource("17_umnjm")

[node name="Mastermind" type="Node2D" parent="."]
script = ExtResource("18_4eqlp")

[node name="ExtraLabels" type="Node2D" parent="."]
script = ExtResource("20_khy6b")

[node name="CardInfo" type="Label" parent="ExtraLabels"]
z_index = 21
offset_left = -534.0
offset_top = 583.0
offset_right = -394.0
offset_bottom = 751.0

[connection signal="addAttack" from="PlayerHand" to="Resources" method="_on_player_hand_add_attack"]
[connection signal="addRecruit" from="PlayerHand" to="Resources" method="_on_player_hand_add_recruit"]
[connection signal="deckCount" from="PlayerHand" to="DeckDisplay" method="_on_player_hand_deck_count"]
[connection signal="discardCount" from="PlayerHand" to="DiscardDisplay" method="_on_player_hand_discard_count"]
[connection signal="endTurn" from="PlayerHand" to="Resources" method="_on_player_hand_end_turn"]
[connection signal="button_down" from="EndTurn/Button" to="PlayerHand" method="_on_button_button_down"]
[connection signal="focusedHQ" from="HQ" to="CardManager" method="_on_hq_focused_hq"]
[connection signal="unFocusHQ" from="HQ" to="CardManager" method="_on_hq_un_focus_hq"]
[connection signal="button_down" from="HQ/Cancel" to="HQ" method="_on_cancel_button_down"]
[connection signal="button_down" from="HQ/Recruit" to="HQ" method="_on_recruit_button_down"]
[connection signal="button_down" from="City/Cancel" to="City" method="_on_cancel_button_down"]
[connection signal="button_down" from="City/Fight" to="City" method="_on_fight_button_down"]
[connection signal="SetupHQ" from="HeroDeck" to="HQ" method="_on_hero_deck_setup_hq"]
[connection signal="value_changed" from="BlackScreen/Sliders/Attack Slider" to="BlackScreen/Sliders" method="_on_attack_slider_value_changed"]
[connection signal="value_changed" from="BlackScreen/Sliders/Recruit Slider" to="BlackScreen/Sliders" method="_on_recruit_slider_value_changed"]
[connection signal="pressed" from="BlackScreen/Sliders/Fight" to="BlackScreen/Sliders" method="_on_fight_pressed"]
[connection signal="pressed" from="BlackScreen/Sliders/Cancel" to="BlackScreen/Sliders" method="_on_cancel_pressed"]
